# prover-cluster

./: .env  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: integration-test.yml  lint.yml
config/: client.yaml  client.yaml.example  client.yaml.sample  client.yaml.template  client_with_lag.yaml.template  coordinator.yaml  coordinator.yaml.example  coordinator.yaml.sample  coordinator.yaml.template
deploy/: README.md  docker-compose.yaml
deploy/commonk8s/: 0_configmaps.yaml  0_secrets.yaml  1_coordinator.yaml  2_services.yaml  README.md
deploy/commonk8s/prerequisite/: 1_db.yaml  2_db-service.yaml
deploy/config/: client.yaml  coordinator.yaml
deploy/images/: build.sh  plonkit.docker  prover.docker  setup.docker
deploy/scripts/: deploy-coordinator.sh  deploy-prover.sh
docker/: docker-compose.yaml
migrations/: 20210330142700_task.sql  20210628084715_add_public_input_to_task.sql
migrations/reset/: down.sql
proto/: cluster.proto  coordinator.proto
src/: lib.rs  pb.rs
src/client/: config.rs  grpc_client.rs  mod.rs  prover.rs  task.rs  watch.rs  witgen.rs  witness.rs
src/config/: client.rs  mod.rs
src/coordinator/: config.rs  controller.rs  coordinator.rs  db.rs  gate_keeper.rs  mod.rs  witness_factory.rs
src/coordinator/db/: mod.rs  models.rs
test/: client.yaml  coordinator.yaml  mock.sql  run.sh  stop.sh
test/mock_sqls/: check.sql  init.sql
