[package]
name = "prover-cluster"
version = "0.1.0"
authors = ["HAOYUatHZ <haoyu@protonmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
bellman_ce = { git = "https://github.com/matter-labs/bellman", branch = "beta", default-features = false, features = ["plonk"] } # active features depend on build type
bellman_vk_codegen = { git = "https://github.com/Fluidex/solidity_plonk_verifier.git" }
config_rs = { package = "config", version = "0.10.1" }
chrono = "0.4.19"
dotenv = "0.15.0"
env_logger = "0.5"
futures = "0.3"
log = "0.4"
plonkit = { git = "https://github.com/Fluidex/plonkit.git" }
prost = "0.7.0"
prost-types = "0.7.0"
serde = { version = "1.0.124", features = ["derive"] }
serde_derive = "1.0.90"
serde_json = "1.0.64"
tokio = { version = "0.2", features = ["full"] }
tonic = "0.4.0"

[build-dependencies]
prost = "0.7.0"
tonic-build = "0.4.0"

[[bin]]
name = "coordinator"
path = "src/bin/coordinator.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"
