[package]
name = "prover-cluster"
version = "0.1.0"
authors = [ "HAOYUatHZ <haoyu@protonmail.com>" ]
edition = "2018"

[dependencies]
anyhow = "1.0"
bellman_ce = { git = "https://github.com/matter-labs/bellman", branch = "beta", default-features = false, features = [ "plonk" ] } # active features depend on build type
bellman_vk_codegen = { git = "https://github.com/fluidex/solidity_plonk_verifier.git" }
chrono = { version = "0.4.19", features = [ "serde" ] }
config_rs = { package = "config", version = "0.10.1" }
dotenv = "0.15.0"
fluidex-common = { git = "https://github.com/fluidex/common-rs", branch = "master", features = [ "non-blocking-tracing", "rollup-state-db" ] }
futures = "0.3"
hex = "0.4.3"
log = "0.4"
nix = "0.22.0"
plonkit = { git = "https://github.com/fluidex/plonkit.git" }
prost = "0.8.0"
serde = { version = "1.0.124", features = [ "derive" ] }
serde_derive = "1.0.90"
serde_json = "1.0.64"
sqlx = { version = "0.5.1", features = [ "runtime-tokio-rustls", "postgres", "chrono", "decimal", "json", "migrate" ] }
tempfile = "3.2.0"
tokio = { version = "1.6.0", features = [ "full" ] }
tonic = "0.5.2"

[build-dependencies]
tonic-build = "0.5.2"

[[bin]]
name = "coordinator"
path = "src/bin/coordinator.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"
